"Set screensaver as background (still need to fix z-index), add set interval check for getting results"

--- a/client/Styles/styles.css
+++ b/client/Styles/styles.css
@@ -18,6 +18,7 @@ a:hover {
   background-color: #fff;
   border: 1px solid #fff;
   margin: 5px;
+  z-index: 1;
 }
 
 
@@ -170,10 +171,10 @@ body {
  *********************************/
 
 iframe {
- /* z-index : -9999;
+  z-index : 0;
   position: absolute;
   top : 0;
-  left    : 0;*/
+  left    : 0;
   width   : 100%;
   height  : 100%;
   margin  : 0;
